# datascience_template

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
docker/: Dockerfile.dev  docker-compose.yml
src/: __init__.py
src/config/: __init__.py  core.yaml  secrets.yaml.example
src/data/: __init__.py  database.py  make_dataset.py  s3_utils.py
src/features/: __init__.py  build_features.py
src/utils/: __init__.py
src/visualization/: visualize.py
tests/: conftest.py
